    * Application changes:
        * Debian::Dependency: reworked to reduce calls to madison. Report available
          versions when unnessary version issue is found.). Source is optional.
    * Framework changes:
        * FuseUI: Fix undef warning

2011-01-10 Dominique Dumont  <domi.dumont@free.fr> 1.230

    * Application changes:
        * Debian::Dependency: don't check debhelper
        * Debian::Copyright: removed license keyword warnings. (fix Debian #610242), lots
          of other bug fixes (including debian bug #609889 #610231)

    * Framework changes:
        * AnyId: added migrate_keys_from to migrate list or hash content 
          during updgrades.
        * ObjTreeScanner: Added node_dispatch_cb parameter to setup callback
          dedicated to specific configuration classes.
        * ValueComputer: added 'undef_is' to allow undef value in formulas. Useful for
          complex migration scenario where migration can come from several alternative parmeters.
        * FuseUI: Fix bug that disabled write in a boolean value
        
2011-01-10 Dominique Dumont  <domi.dumont@free.fr> 1.229

        * config-edit: added -apply-fixes option
        * Value: can specify wider replace instruction by using regexp as
          key of the 'replace' parameter
        * Debian::Dpkg::Copyright: updtead to new CANDIDATE DEP-5
          specification. Copyright files written for older
          specifications are migrated to the new specification. This
          should save a lot of typing from my fellow Debian packagers.
          Feedbacks are welcome.


2011-01-09 Dominique Dumont  <domi.dumont@free.fr> 1.228

        * Specifically require DB_File as this module is not available by default on Ubuntu
        * Skip Debian dependency tests when AptPkg::Config is not available (non Debian systems)

2011-01-07 Dominique Dumont  <domi.dumont@free.fr> 1.227

        * Model.pm: deprecated name_match parameter in accept